--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,10 +2,15 @@
 
 @font-face{
 	font-family: 'PT-Sans';
-	src:'../fonts/PT-Sans/PTSans-Regular.ttf';
+	src: url('../fonts/PT-Sans/PTSans-Regular.ttf');
 }
 
 @font-face{
     font-family: "Roboto";
-    src: '../fonts/Roboto/Roboto-Regular.ttf';
+    src: url('../fonts/Roboto/Roboto-Regular.ttf');
+}
+
+@font-face{
+    font-family: 'Rubik';
+    src: url('../fonts/static/Rubik-Regular.ttf')
 }
