--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -21,15 +21,15 @@
 }
 
 .button.primary-button{
-	background: var(--gradient-color);
+	background: var(--button-color);
 	background-clip: padding-box;
-	color: whitesmoke;
+	color:var(--primary-color);
 	transition: background.6s ease;
 	box-shadow:var(--box-shadow);
 }
 
-.button.primary-button:hover, .contact-container:hover{
-	background: whitesmoke;
+.button.primary-button:hover{
+	background:var(--secondary-color);
 	background-clip: padding-box;
 	color: black;
 }
@@ -38,15 +38,15 @@
 	position: absolute;
 	top: -3px; left:-3px;
 	bottom:-3px; right: -3px;
-	background: var(--gradient-color);
+	background: var(--button-color);
 	content: '';
 	z-index: -1;
 	border-radius: 4px;
 }
 
 .contact-container:hover .contact-icon, .up-btn:hover{
-	background: var(--gradient-color);
-	color: whitesmoke;
+	background: var(--button-color);
+	color: var(--primary-color);
 	background-clip: padding-box;
 	box-shadow:var(--box-shadow);
 }
@@ -61,7 +61,6 @@ button:active
 button:hover
 .btn:active,
 .btn.active
-.contact-container:hover
 .contact-container{
 	outline: 0px !important;
 	box-shadow: none;
