--- a/css/partials/_variables.css
+++ b/css/partials/_variables.css
@@ -7,14 +7,16 @@ html, body{
 
 /*css variables*/
 :root{
-	--primary-color: #f1f1f1;
-	--primary-color2: #212121;
+	--bg-color: #f5f6f9;
+	--primary-color: #FFFFFF;
+	--primary-color2: #272B2A;
 	--secondary-color:   #e7eaef;
-	--secondary-color2: #bbb6b6;
-	--title-color:	#8a8888;
+	--secondary-color2: #E5C575;
+	--title-color:#82E2B0;
 	--text-color: #777777;
 	--border-color: #201f1f17;
-	--button-color: #424246;
+	--button-color:#6E7271;
+	--card-color: #3F4859;
 	--shadow-color: 0px, 10px, 30px rgba(118, 85, 225, 0.3);
 	--box-shadow: 0px 10px 30px rgba(57,56, 61, 0, 205);
 }
