Update for Autumn 2021

--- a/css/partials/_variables.css
+++ b/css/partials/_variables.css
@@ -10,6 +10,7 @@ html, body{
 	--bg-color: #f5f6f9;
 	--primary-color: #FFFFFF;
 	--primary-color2: #272B2A;
+	--primary-color3: #16161d;
 	--secondary-color:   #e7eaef;
 	--secondary-color2: #E5C575;
 	--title-color:#82E2B0;
