--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -9,6 +9,9 @@
 	text-transform: uppercase;
 }
 
+ul {
+	list-style-type: none;
+  }
 /* buttons start */
 
 .button{
@@ -35,6 +38,31 @@
 }
 
 .button.primary-button::after{
+	position: absolute;
+	top: -3px; left:-3px;
+	bottom:-3px; right: -3px;
+	background: var(--button-color);
+	content: '';
+	z-index: -1;
+	border-radius: 4px;
+}
+
+.button.secondary-button{
+	background: var(--primary-color3);
+	background-clip: padding-box;
+	color:var(--primary-color);
+	transition: background.6s ease;
+	box-shadow:var(--box-shadow);
+}
+
+.button.secondary-button:hover{
+	background:var(--primary-color3);
+	background-clip: padding-box;
+	color: var(--secondary-color);
+	border-color: var(--primary-color3);
+}
+
+.button.secondary-button::after{
 	position: absolute;
 	top: -3px; left:-3px;
 	bottom:-3px; right: -3px;
