--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 1000;
-	background-color: white;
+	background-color: var(--primary-color3);
 }
 
 #loader {
@@ -143,8 +143,8 @@
 
 /* body */
 body{
-	color: var(--primary-color2);
-	background-color: var(--bg-color);
+	color: var(--bg-color);
+	background-color: var(--primary-color3);
 	font-family: 'PT-Sans';
 }
 
@@ -174,6 +174,13 @@ body{
 	-webkit-text-fill-color: transparent;
 	background-clip: text;
 }
+
+.scrolled-down{
+	transform:translateY(-100%); transition: all 0.3s ease-in-out;
+  }
+  .scrolled-up{
+	transform:translateY(0); transition: all 0.3s ease-in-out;
+  }
 /*end nav*/
 
 /* start banner area */
@@ -234,7 +241,7 @@ body{
 /* start about-me area */
 
 .site-main .about-area{
-	background: var(--primary-color);
+	background: var(--bg-color);
 	padding: 6rem 0;
 	vertical-align: middle;
 }
@@ -253,6 +260,78 @@ body{
 	font-family: Roboto;
 }
 
+/* employment area start */
+.site-main .emp-area{
+	background: var(--primary-color3);
+	min-height: 600px;
+	padding: 6rem 0;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.site-main .emp-area .emp-title h2>span{
+	padding-top: none;
+	display: block;
+	font: normal bold 49px/70px;
+	font-family: PT-Sans;
+	letter-spacing: 3px;
+}
+
+.site-main .emp-area .emp-title .paragraph>p{
+	padding: 2rem 0;
+	font-size: 18px;
+	font-family: Roboto;
+}
+
+.emp-item {
+	display: block;
+	color : var(--secondary-color)
+}
+
+.emp-btn {
+	padding: .8rem 2.2rem;
+	font: normal 300 16px/20px;
+	position: relative;
+	font-family: 'PT-Sans';
+	border-width: 0 0 0 5px;
+	border-left-color: var(--primary-color3);
+	background: var(--primary-color3);
+	background-clip: padding-box;
+	color:var(--button-color);
+	transition: background.6s ease;
+	box-shadow:var(--box-shadow);
+}
+
+.emp-btn:hover{
+	box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.05);
+	background-clip: padding-box;
+	color: var(--secondary-color2);
+}
+
+.emp-desc {
+	display: none;
+}
+
+.emp-desc-active {
+	display: grid;
+	transition: transform 0.5s;
+}
+
+.emp-role, .emp-duration, li > p{
+	color : var(--secondary-color);
+	text-align: left;
+	font-weight: lighter;
+}
+
+.emp-active {
+	border-left-color: var(--secondary-color2);
+	color: var(--secondary-color2)
+}
+
+.company-name {
+	color: var(--secondary-color2)
+}
+
 /* skills area start */
 
 .skill-title{
@@ -262,7 +341,8 @@ body{
 }
 
 .skills-area {
-	margin-bottom: 10rem;
+	background: var(--bg-color);
+	padding: 1rem 0;
 }
 
 .flip-card img{
@@ -415,7 +495,7 @@ body{
 /* start project area */
 .site-main .project-area{
 	padding: 5rem 0;
-	background-color: var(--primary-color);
+	background-color: var(--primary-color3);
 }
 
 .site-main .project-area .container{
@@ -459,7 +539,7 @@ body{
 .project-card{
 	width: 100%;
 	margin: auto;
-	min-height:350px;
+	min-height:300px;
 	position: sticky;
 	border-top-left-radius:6px;
 	border-top-right-radius:6px;
@@ -493,7 +573,7 @@ body{
 	left:0;
 	right:0;
 	margin-bottom: 15px;
-	background:var(--bg-color);
+	background:var(--primary-color3);
 	transition:.4s ease-in;
 	overflow:hidden;
 	border-bottom-left-radius:6px;
@@ -579,7 +659,7 @@ body{
 	border-top-right-radius:6px
 }
 
-.view-more{
+.button.primary-button.view-more {
 	margin-top: 4rem;
 }
 
@@ -614,7 +694,7 @@ body{
 
 .site-main .contact-area{
 	padding: 5rem 0;
-	background: var(--primary-color);
+	background: var(--bg-color);
 	margin-bottom: 0rem;
 }
 
@@ -625,6 +705,7 @@ body{
 .contact-container p{
 	font-family: "PT-Sans", normal;
 	font-size: 20px;
+	color: var(--primary-color3);
 }
 
 .contact-msg{
@@ -654,6 +735,7 @@ body{
 	text-align:right;
 	margin-bottom:3rem;
 	font-family: "PT-Sans", normal;
+	color: var(--primary-color3);
 }
 
 .social-media-pack{
@@ -746,7 +828,7 @@ input:-webkit-autofill{
 /* start footer area */
 .footer{
 	padding:4rem 15% 2rem 15%;
-	background-color:var(--card-color);
+	background-color:var(--primary-color3);
 	width:100%;
 	display:flex;
 	flex-direction:column;
